Falta modificar el array (ya sabemos hacerlo)

--- a/css/style.css
+++ b/css/style.css
@@ -130,17 +130,17 @@ body {
 	}
 
 	26% {
-		background-image: url('../img/img-slider2.jpeg');
+		background-image: url('../img/img-slider2.jpg');
 	}
 	50% {
-		background-image: url('../img/img-slider2.jpeg');
+		background-image: url('../img/img-slider2.jpg');
 	}
 
 	51% {
-		background-image: url('../img/img-slider3.jpeg');
+		background-image: url('../img/img-slider3.jpg');
 	}
 	75% {
-		background-image: url('../img/img-slider3.jpeg');
+		background-image: url('../img/img-slider3.jpg');
 	}
 
 	76% {
@@ -149,4 +149,44 @@ body {
 	100% {
 		background-image: url('../img/img-slider4.jpg');
 	}
+}
+
+#app {
+	width: 30%;
+	background-color: rgb(87, 0, 0);
+	margin: 0 auto;
+	margin-top: 30px;
+	margin-bottom: 30px;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	padding: 20px;
+}
+
+form {
+	margin: 10px;
+	border: solid 2px rgb(17, 17, 17);
+}
+
+section {
+	background: #fff fixed no-repeat 50% 50%;
+	background-size: cover;
+}
+
+footer {
+	background-color: rgb(17, 17, 17);
+	color: white;
+	width: 100%;
+	font-family: monospace;
+	font-size: 10px;
+	text-align: center;
+}
+
+footer h1 {
+	padding: 10px;
+}
+
+.footer-h1:hover {
+	color: rgb(150, 7, 7);
 }
